--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.70.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^10.0.2",
     "react-router-dom": "^7.10.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
