--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^10.0.2",
     "react-router-dom": "^7.10.1",
+    "socket.io-client": "^4.8.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.5",
