--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^12.24.7",
     "jose": "^6.1.3",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
     "next-themes": "^0.4.6",
